| Bug #43397 | mysql headers redefine pthread_mutex_init unnecessarily | ||
|---|---|---|---|
| Submitted: | 5 Mar 3:45 | Modified: | 30 Aug 1:40 |
| Reporter: | Jess Balint | ||
| Status: | Closed | ||
| Category: | C API | Severity: | S3 (Non-critical) |
| Version: | 5.1.32 | OS: | Linux |
| Assigned to: | Staale Smedseng | Target Version: | 5.1+ |
| Triage: | Triaged: D3 (Medium) | ||
[5 Mar 10:43]
Sveta Smirnova
Thank you for the report. Verified as described. Bug is not repeatable with current development sources.
[5 Mar 10:46]
Sveta Smirnova
Bug existed in earlier 5.1 packages (tested since 5.1.11)
[6 Mar 18:23]
Jess Balint
reported against 5.1.32, *current* release
[9 Apr 21:23]
Jim Winstead
The problem here is that pthread_mutex_init() gets redefined when configured with --with-fast-mutexes based on flags which are written to my_config.h, but then is actually only redefined (and replaced with my_pthread_fastmutex_init) for libmysqlclient_r. So something that links against libmysqlclient (no _r) but uses pthread_mutex_init() will be looking for a routine that isn't there. Connector/ODBC links against both libmysqclient_r and libmysqclient (at least in 3.51), which is why it runs into this problem.
[8 Jul 16:04]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/78215 3015 Staale Smedseng 2009-07-08 Bug #43397 mysql headers redefine pthread_mutex_init unnecessarily The problem is that libmysqlclient.so is built with THREAD undefined, while a client compiling against the same header files will see THREAD as defined and definitions in my_pthread.h will be included, possibly resulting in undefined symbols that cannot be resolved with libmysqlclient.so. The suggested solution is to require that clients wanting to link with libmysqlclient.so should be build with NO_THREADS defined. This requires a documentation change, and more details for this will be supplied if this patch is approved. The NO_THREADS define was renamed from UNDEF_THREADS_HACK, to get a more suitable (less suspicious) name for the define. This patch is also in anticipation of WL#4958, which will remove this problem altogether by dropping the building of the libmysqlclient.
[8 Jul 16:50]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/78226 3015 Staale Smedseng 2009-07-08 Bug #43397 mysql headers redefine pthread_mutex_init unnecessarily The problem is that libmysqlclient.so is built with THREAD undefined, while a client compiling against the same header files will see THREAD as defined and definitions in my_pthread.h will be included, possibly resulting in undefined symbols that cannot be resolved with libmysqlclient.so. The suggested solution is to require that clients wanting to link with libmysqlclient.so should be built with MYSQL_CLIENT_NO_THREADS defined. This requires a documentation change, and more details for this will be supplied if this patch is approved. The MYSQL_CLIENT_NO_THREADS define was renamed from UNDEF_THREADS_HACK, to get a more suitable (less suspicious) name for the define. (The UNDEF_THREADS_HACK is retained for backwards compatibility, though.) This patch is also in anticipation of WL#4958, which will remove this problem altogether by dropping the building of libmysqlclient.
[10 Jul 19:54]
Jim Winstead
I don't think this patch fixes this problem in any significant way. There is no reason that our public header files should ever be redefining a standard function like pthread_mutex_init().
[4 Aug 21:51]
Bugs System
Pushed into 5.4.4-alpha (revid:alik@sun.com-20090804194615-h40sa098mx4z49qg) (version source revid:staale.smedseng@sun.com-20090710153603-pz0i5i78mu5pcng3) (merge vers: 5.4.4-alpha) (pib:11)
[26 Aug 15:45]
Bugs System
Pushed into 5.1.37-ndb-7.0.8 (revid:jonas@mysql.com-20090826132541-yablppc59e3yb54l) (version source revid:jonas@mysql.com-20090826132541-yablppc59e3yb54l) (merge vers: 5.1.37-ndb-7.0.8) (pib:11)
[26 Aug 15:46]
Bugs System
Pushed into 5.1.37-ndb-6.3.27 (revid:jonas@mysql.com-20090826105955-bkj027t47gfbamnc) (version source revid:jonas@mysql.com-20090826105955-bkj027t47gfbamnc) (merge vers: 5.1.37-ndb-6.3.27) (pib:11)
[26 Aug 15:48]
Bugs System
Pushed into 5.1.37-ndb-6.2.19 (revid:jonas@mysql.com-20090825194404-37rtosk049t9koc4) (version source revid:jonas@mysql.com-20090825194404-37rtosk049t9koc4) (merge vers: 5.1.37-ndb-6.2.19) (pib:11)
[27 Aug 18:32]
Bugs System
Pushed into 5.1.35-ndb-7.1.0 (revid:magnus.blaudd@sun.com-20090827163030-6o3kk6r2oua159hr) (version source revid:jonas@mysql.com-20090826132541-yablppc59e3yb54l) (merge vers: 5.1.37-ndb-7.0.8) (pib:11)
[28 Aug 12:55]
Staale Smedseng
It is suggested that one or both of the following documentation sections are updated for this patch (referring to the 5.1 documentation section numbers here): 21.10.10.4 Problems Linking with the C API 21.10.16 Building Client Programs Possible wording: Linking with the single threaded library (libmysqlclient) may lead to linker errors related to pthread symbols. When using the single threaded library, please compile your client with MYSQL_CLIENT_NO_THREADS defined. This can be done on the command line by using the -D option to the compiler, or in your source code before including the MySQL header files. This define should not be used when building for use with the thread-safe client library (libmysqlclient_r).
[30 Aug 1:40]
Paul DuBois
I added the suggested wording to 21.10.10.4, and repositioned it within the chapter as a subsection of 21.10.16.

Description: client headers redefine pthread_mutex_init() This is not a problem in mysql 5.0.77 How to repeat: #include <stdio.h> #include <my_global.h> #include <my_sys.h> #include <mysql.h> #include <my_list.h> #include <m_string.h> #include <mysqld_error.h> main() { pthread_mutex_init(0,0); mysql_init(0); } cc -I$MYSQL_DIR/include test.c /home/jbalint/Desktop/Work/mysql-5.1.32-linux-i686-glibc23/lib/libmysqlclient.so /tmp/cc86PJH8.o: In function `main': test.c:(.text+0x21): undefined reference to `my_pthread_fastmutex_init' collect2: ld returned 1 exit status However, this works if i define UNDEF_THREADS_HACK cc -I$MYSQL_DIR/include -DUNDEF_THREADS_HACK test.c /home/jbalint/Desktop/Work/mysql-5.1.32-linux-i686-glibc23/lib/libmysqlclient.so