Bug#43397 mysql headers redefine pthread_mutex_init unnecessarily

Changing an instance of the define that was missed
in the original commit due to the fact that it was
misspelled.